--- a/morita.tex
+++ b/morita.tex
@@ -1,12 +1,12 @@
 \documentclass[shinchoku]{hitsotsuron} %文書のクラスファイルを指定
 
 %題目の各文字列を指定
-\title{セキュアコーディング支援システムの開発}
+\title{title}
 
 \papertype{平成28年度卒業研究概要}
 \author{森田浩平}
 \snumber{B214205}
-\advisor{松本慎平}
+\advisor{指導教員}
 \date{2017年9月21日}
 
 \begin{document} %文書本体の開始
