--- a/morita.tex
+++ b/morita.tex
@@ -4,8 +4,8 @@
 \title{title}
 
 \papertype{平成28年度卒業研究概要}
-\author{森田浩平}
-\snumber{B214205}
+\author{mrtc0}
+\snumber{学籍番号}
 \advisor{指導教員}
 \date{2017年9月21日}
 
