--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[shinchoku]{hitsotsuron} %文書のクラスファイルを指定
+\documentclass[shinchoku]{template} %文書のクラスファイルを指定
 
 %題目の各文字列を指定
 \title{title}
